Try fixing this error: `Build Error: Module not found: Can't resolve 'fs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "@types/turndown"]
+    "types": ["node", "@types/turndown", "@types/file-saver"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
