--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
     "html-to-docx": "^1.8.0",
@@ -60,6 +61,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
